--- a/environment.yml
+++ b/environment.yml
@@ -1,14 +1,19 @@
+# environment.yml for GTB project
+# This conda environment supports data ingestion scripts that fetch
+# preliminary datasets (heat, pollution, demographics, temperature,
+# elevation, land cover, air quality, sea level rise, etc.)
+# Required packages include APIs, file handling, and geospatial tools.
+
 name: gtb-env
 channels:
   - conda-forge
+  - defaults
+
 dependencies:
   - python=3.11
   - pip
+  - requests
+  - python-dotenv
+  - mercantile
   - pip:
-      - jupyter
-      - geemap
-      - earthengine-api
-      - python-dotenv
-      - numpy
-      - pandas
-      - rasterio
+      - tqdm
