updated .env.example again

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ NOAA_TOKEN=REPLACE_WITH_YOUR_NOAA_TOKEN
 AIRNOW_API_KEY=your_airnow_key_here
 NASA_USERNAME=yourNASAusername
 NASA_PASSWORD=yourNASApassword
+PO_DAAC_USERNAME=Username
+PO_DAAC_PASSWORD=Password
